--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<p class="text-title-company">Data Science Division, GovTech</p>
 				</div>
 				<div class="col">
-					<img src="" alt="Company Logo">
+					<img src="RRL CARD 2 to print.png" alt="Company Logo">
 				</div>
 			</div>
 		</div>
