--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="www.roadrunnerokc.com">
+		<a href="https://www.roadrunnerokc.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
